<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:overScrollMode="never"
    android:paddingHorizontal="30dp"
    android:scrollbars="none"
    android:id="@+id/scroll_view"
    tools:context=".CalculateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/first_main_color"
            android:elevation="5dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:elevation="5dp"
            app:layout_constraintBottom_toTopOf="@id/result_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_how_year_you_want_to_live_smoke" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            app:cardBackgroundColor="@color/card_view_background"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/calculate_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/calculate_text">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_back_arrow"
                app:tint="@color/text_color" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_count_in_pack_smoke"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/first_main_color"
            app:hintTextColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@id/box_cost_of_one_park_smoke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_count_on_day_smoke"
            app:suffixText="@string/pack">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/count_in_pack"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:text="@string/twenty"
                android:textColor="@color/text_color"
                android:textColorHint="@color/black_fifty"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_cost_of_one_park_smoke"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/first_main_color"
            app:hintTextColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@id/box_salary_smoke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_count_in_pack_smoke"
            app:prefixText="$">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/cost_of_your_one_pack_smoke"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:textColor="@color/text_color"
                android:textColorHint="@color/black_fifty"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_salary_smoke"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/first_main_color"
            app:hintTextColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@id/box_experience_smoke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_cost_of_one_park_smoke"
            app:prefixText="$">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/salary"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:textColor="@color/text_color"
                android:textColorHint="@color/black_fifty"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_how_year_you_want_to_live_smoke"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/first_main_color"
            app:hintTextColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@id/calculate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_experience_smoke"
            app:startIconDrawable="@drawable/ic_calendar_icon_svg"
            app:startIconTint="@color/first_main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="@color/text_color"
                android:textColorHint="@color/black_fifty"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_experience_smoke"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/first_main_color"
            app:layout_constraintBottom_toTopOf="@id/box_how_year_you_want_to_live_smoke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_salary_smoke"
            app:startIconCheckable="true"
            app:startIconDrawable="@drawable/ic_calendar_icon_svg"
            app:startIconTint="@color/first_main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/experience_smoking"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_count_on_day_smoke"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/first_main_color"
            app:hintTextColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@id/box_count_in_pack_smoke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_text"
            app:suffixText="@string/pack">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/count_on_a_day"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calculate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/calculate"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/result"
            android:textAlignment="textStart"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>